--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 body{
     font-family: 'Poppins', sans-serif;
+    
 }
+.banner-img img{
+    width: 600px;
+}
+
 .volkhov{
     font-family: 'Poppins', sans-serif;
     font-family: 'Volkhov', serif;
     font-size: 84px;
     color: #181E4B;
 }
-.category-hover:hover{
-    transform: scale(1.1);
-    transition: 0.5s;
+.category-hover{
     cursor: pointer;
 }
  @media only screen and (max-width: 600px) { 
-
     .volkhov{
         font-size: 30px;  
     }
