--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
     font-family: 'Poppins', sans-serif;
     
 }
+.banner{
+    margin-top: 50px;
+}
 
 .banner-img img{
     width: 600px;
@@ -49,9 +52,30 @@ body{
     transform: scale(1.2);
     transition:0.5s linear 1.5s;
   }
+  .footer-anchor p a{
+      text-decoration: none;
+      color: #0c1b8a;
+  }
+  .footer-anchor h3{
+      font-weight: bold;
+  }
+  .footer-anchor h1{
+      font-size: 80px;
+      font-weight: bolder;
+  }
+  .footer-anchor a i{
+      font-size: 50px;
+      margin-left: 10%;
+      color: tomato;
+  }
+  .footer-anchor a i:hover{
+      transform: scale(1.2);
+      transition: 0.5s;
+      color: teal;
+  }
 
 
- @media only screen and (max-width: 600px) { 
+ @media only screen and (max-width: 767px) { 
     
     .volkhov{
         font-size: 30px;  
@@ -74,7 +98,7 @@ body{
     }
     
   } 
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  @media only screen and (min-width: 768px) and (max-width: 1023px) {
 
     .banner-img img{
         width: 500px;
