--- a/style.css
+++ b/style.css
@@ -96,6 +96,15 @@ body{
         position: relative;
         z-index: 20;
     }
+    .footer-anchor{
+        text-align: center;
+    }
+    .footer-anchor a i{
+      font-size: 50px;
+      margin-left: 2%;
+      margin-right: 2%;
+      color: tomato;
+  }
     
   } 
   @media only screen and (min-width: 768px) and (max-width: 1023px) {
@@ -113,5 +122,14 @@ body{
         position: relative;
         z-index: 20;
     }
+    .footer-anchor{
+        text-align: center;
+    }
+    .footer-anchor a i{
+      font-size: 50px;
+      margin-left: 2%;
+      margin-right: 2%;
+      color: tomato;
+  }
 
   }
